[package]
name = "stoki-news-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stoki-news-server"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1.52",  features = ["full"] }
axum        = "0.8"
reqwest     = { version = "0.13",  features = ["json"] }
rss         = "2.0"
serde       = { version = "1",     features = ["derive"] }
serde_json  = "1"
chrono      = "0.4"
tower-http  = { version = "0.6",   features = ["cors"] }
